<resources>
    <!-- Navigation -->
    <string name="navigation_main_activity">Main menu</string>
    <string name="navigation_game_start_activity">Start game</string>
    <string name="navigation_game_index_activity">Games played</string>
    <string name="navigation_game_statistics_activity">Statistics</string>
    <string name="navigation_tutorial_activity">Tutorial</string>

    <!-- MainActivity -->
    <string name="app_name">Mnemono</string>
    <string name="button_start_game">New memory game</string>
    <string name="button_statistics">Statistics</string>
    <string name="button_games_played">Games played</string>
    <string name="button_about">About</string>
    <string name="button_tutorial">Tutorial</string>
    <string name="title_activity_game_start">GameStartActivity</string>

    <!-- GameIndexActivity -->
    <string name="game_index_header">Games played</string>
    <string name="game_index_text_view_game_started_from">Started from date</string>
    <string name="game_index_text_view_game_started_to">Started to date</string>
    <string name="game_index_text_view_game_type">Game type</string>
    <string name="game_index_text_view_game_list">Games played</string>

    <!-- GameStartActivity -->
    <string name="game_start_header">Start game</string>
    <string name="spinner_game_type_header">Select type</string>
    <string name="edit_text_game_items_count_header">Items count</string>
    <string name="edit_text_game_items_count_hint">Items count</string>
    <string name="edit_text_game_duration_header">Duration (hours, minutes, seconds)</string>
    <string name="edit_text_game_duration_hours_hint">Duration in hours</string>
    <string name="edit_text_game_duration_minutes_hint">Duration in minutes</string>
    <string name="edit_text_game_duration_seconds_hint">Duration in seconds</string>
    <string name="check_box_game_included_in_statistics">Included in statistics</string>
    <string name="button_game_play">Play</string>

    <string name="game_validation_allAnswersCount_min">Too little items to play</string>
    <string name="game_validation_allAnswersCount_max">%d items is upper limit for %s game</string>
    <string name="game_validation_type_inArray">Wrong type</string>
    <string name="game_validation_durationInSeconds_min">Duration too short</string>
    <string name="game_validation_durationInSeconds_max">Duration too long</string>

    <!-- GamePlayActivity -->
    <string name="game_play_header">Remember</string>
    <string name="button_game_process_to_answer">I\'m ready</string>
    <string name="game_play_provide_answers_hint">Write here what you\'ve remembered on previous view…</string>

    <!-- GameAnswerActivity -->
    <string name="game_answer_header">Answer</string>
    <string name="button_game_check">Check</string>
    <string name="game_play_answer_poker_notation_help">Help</string>
    <string name="game_play_answer_poker_notation_popup">Poker notation\n\nAll cards are represented in form SignSuit\nSigns are from ace to king: A, 1, 2, 3, 4, 5, 6, 7, 8, 9, T, J, Q, K\nSuits are made of first lowercase letter of hearts, diamonds, clubs and spades\n\nClick outside to close</string>

    <!-- GameResultActivity -->
    <string name="game_result_header">Result</string>
    <string name="button_game_result_go_back">Go back</string>

    <!-- GameStatisticsActivity -->
    <string name="game_statistics_header">Statistics</string>
    <string name="game_statistics_text_view_date_started_from">Started from date</string>
    <string name="game_statistics_text_view_date_started_to">Started to date</string>
    <string name="game_statistics_text_view_group_by">Group games by</string>

    <!-- AboutActivity -->
    <string name="about_header">About</string>
    <string name="about_paragraph_1">This app was provided to you by primero.el.dev, Polish developer. It comes with no warranty.</string>
    <string name="about_paragraph_2">There are no ads, no premium content and never will be.</string>
    <string name="about_paragraph_3">Almost all app data is stored automatically in cloud with rules for backups specifics for your Android version (see documentation, default auto backup settings).</string>
    <string name="about_paragraph_4">Have any questions? Want provide a feedback? Send email to primero.el.dev.feedback@gmail.com</string>
    <string name="about_contact_me">Contact me!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

    <!-- TutorialActivity -->
    <string name="tutorial_header">Tutorial</string>
    <string name="tutorial_header_1">General tips</string>
    <string name="tutorial_paragraph_1">You could navigate through app using menu in right upper corner of the screen\n(3 vertically aligned dots).</string>
    <string name="tutorial_header_2">How to start memory game</string>
    <string name="tutorial_paragraph_2">If you want to start new memory game, click corresponding button on a main menu.\nYou\'ll see start game screen where you could choose details of a game.\nWhile you\'re done, you may click process to the next screen and start remembering.</string>
    <string name="tutorial_header_3">Gameplay</string>
    <string name="tutorial_paragraph_3">If you exit game play screen, it\'s equal to resign. You may switch to other tab, but if you try to switch to other tab in the app, game will end.\nAlso if you finish remembering earlier than the time you\'ve reserved, it\'l be saved as a real time of remembering. That\'s why you could give yourself much more time to remember to feel more secure and eventually finish earlier.</string>
    <string name="tutorial_header_4">Insight into progress</string>
    <string name="tutorial_paragraph_4">App gives you an option to see your previous games details after clicking "games played" in a main menu.\nYou could also see statistics for previous games, correctness in percents and seconds per correct answer.\nSeeing games in statistics is only possible after selecting this option on game start screen.</string>
</resources>